# skbuild-conan

./: .gitignore  .pre-commit-config.yaml  CI_CD_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  PACKAGE_REVIEW.md  README.md  pyproject.toml  pytest.ini  test_examples.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: pytest.yml  pytest_cgal.yml  pytest_cgal_custom_recipe.yml  pytest_cgal_windows.yml  pytest_windows.yml  release.yml
examples/cgal_skbuild_conan_example/: README.md  pyproject.toml  setup.py
examples/cgal_skbuild_conan_example/cmake/: CPM.cmake
examples/cgal_skbuild_conan_example/conans/cgal_custom/: CMakeLists.txt  conandata.yml  conanfile.py
examples/cgal_skbuild_conan_example/conans/cgal_custom/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
examples/cgal_skbuild_conan_example/src/: CMakeLists.txt
examples/cgal_skbuild_conan_example/src/cgal_skbuild_conan_example/: CMakeLists.txt  __init__.py  _cgal_bindings.cpp
examples/cgal_skbuild_conan_example/tests/: test_field_numbers.py
examples/cgal_skbuild_conanio_example/: CMakeLists.txt  CMakeUserPresets.json  README.md  pyproject.toml  setup.py
examples/cgal_skbuild_conanio_example/src/: CMakeLists.txt
examples/cgal_skbuild_conanio_example/src/cgal_skbuild_conanio_example/: CMakeLists.txt  _cgal_bindings.cpp
examples/cgal_skbuild_conanio_example/tests/: test_field_numbers.py
examples/cmake_layout_example/: CMakeLists.txt  conanfile.txt  setup.py
examples/cmake_layout_example/src/cmake_layout_example/: _bindings.cpp
examples/cmake_layout_example/tests/: test_add.py
examples/simple_skbuild_conan_example/: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/simple_skbuild_conan_example/src/simple_skbuild_conan_example/: _bindings.cpp
examples/simple_skbuild_conan_example/tests/: test_add.py
src/skbuild_conan/: __init__.py  conan_helper.py  exceptions.py  logging_utils.py  setup_wrapper.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_conan_helper.py  test_exceptions.py  test_logging.py  test_setup_wrapper.py  test_validation.py
